fix footer align

--- a/assets/css/en/common.css
+++ b/assets/css/en/common.css
@@ -16,14 +16,7 @@ body {
    color: #333;
    border-top: 3px solid #0089a1;
    background: #fff;
-   text-align: justify;
-   text-justify: inter-ideograph;
 }
-
-mark {
-   background-color: rgba(255, 255, 0, 0.5);
-}
-
 
 br {
    letter-spacing: normal;
@@ -37,7 +30,6 @@ a {
 a:hover {
    color: #0089a1;
    text-decoration: underline;
-
 }
 
 img {
@@ -64,7 +56,6 @@ h6 {
    text-decoration: underline;
    color: black;
 }
-
 
 
 
@@ -101,15 +92,7 @@ th {
    background-color: #ccccff
 }
 
-/* ========NEWS================= */
-.newsDiv {
-   border-left: 2px solid black;
-   border-right: 2px solid black;
-   padding-left: 5px;
-   padding-right: 5px;
-   background-color: whitesmoke;
 
-}
 
 /* ========TEMPLATE LAYOUT======== */
 #header {
@@ -143,7 +126,7 @@ th {
    color: #aaa;
    border: solid 1px #ccc;
    text-align: center;
-   width: 300px;
+   width: 230px;
 }
 
 
@@ -151,7 +134,7 @@ th {
    width: 100%;
    float: center;
    border-bottom: 5px solid #0089a1;
-   background: url("../images/bg/bg_menu.gif") 0 0 repeat-x;
+   background: url("../../images/bg/bg_menu.gif") 0 0 repeat-x;
 }
 
 #icatchIndexWrap {
@@ -189,14 +172,14 @@ th {
    float: right;
    width: 700px;
    padding: 10px;
-   background: url("../images/bg/bg_contents.gif") 100% 0 no-repeat;
+   background: url("../../images/bg/bg_contents.gif") 100% 0 no-repeat;
 }
 
 #sub {
    float: left;
    width: 220px;
    padding: 10px;
-   background: url("../images/bg/bg_contents.gif") 0 0 no-repeat;
+   background: url("../../images/bg/bg_contents.gif") 0 0 no-repeat;
 }
 
 #pageTop {
@@ -260,7 +243,6 @@ th {
 }
 
 #menu li {
-
    float: left;
    color: #333;
    text-align: center;
@@ -279,13 +261,13 @@ th {
 #menu li a.active {
    color: #fff;
    text-decoration: none;
-   background: url("../images/bg/bg_menu_on.gif") 0 0 repeat-x;
+   background: url("../../images/bg/bg_menu_on.gif") 0 0 repeat-x;
 }
 
 #menu li a:hover {
    color: #fff;
    text-decoration: none;
-   background: url("../images/bg/bg_menu_on.gif") 0 0 repeat-x;
+   background: url("../../images/bg/bg_menu_on.gif") 0 0 repeat-x;
 }
 
 
@@ -310,7 +292,7 @@ th {
    padding: 10px 10px 10px 10px;
    font-size: 16px;
    border-bottom: 1px dotted #ddd;
-   background: #fff url("../images/bg/bg_main_h3.gif") 0 0 repeat-x;
+   background: #fff url("../../images/bg/bg_main_h3.gif") 0 0 repeat-x;
 }
 
 #main h4 {
@@ -359,16 +341,13 @@ th {
    width: 10em;
    margin: 0;
    padding: 0;
-
 }
 
 #main dl.information dd {
    margin: 0 0 0.5em 10em;
    padding: 0;
    background: transparent;
-
 }
-
 
 #main table {
    width: 100%;
@@ -377,25 +356,11 @@ th {
 
 #main table th {
    padding: 0px;
-   font-size: 8px;
+   font-size: 10px;
    text-align: left;
    border: 1px solid #ddd;
    background: #f0f7fc;
 }
-
-#main table td {
-   padding: 0px;
-   font-size: 8px;
-   text-align: left;
-   border: 1px solid #ddd;
-}
-
-
-#main table td a {
-   color: #000000;
-   text-decoration: underLine;
-}
-
 
 #main table td {
    padding: 0px;
@@ -404,10 +369,10 @@ th {
    border: 1px solid #ddd;
 }
 
-#main li {
-   margin-left: 15px;
+#main table td a {
+   color: #000000;
+   text-decoration: underLine;
 }
-
 
 /* ========SUBCONTENTS CUSTOMIZE======== */
 #sub .section {
@@ -416,7 +381,6 @@ th {
 }
 
 #sub h3 {
-
    padding: 10px 5px;
    font-size: 13px;
    font-weight: bold;
@@ -424,7 +388,7 @@ th {
    text-align: center;
    border: 1px solid #fff;
    border-bottom: none;
-   background: #0089a1 url("../images/bg/bg_sub_h3.gif") 0 0 repeat-x;
+   background: #0089a1 url("../../images/bg/bg_sub_h3.gif") 0 0 repeat-x;
 }
 
 #sub ul {
@@ -440,7 +404,7 @@ th {
    line-height: 1.4;
    border: 1px solid #b5b5b5;
    list-style: none;
-   background: #fff url("../images/bg/bg_sub_list.gif") 0 0 repeat-x;
+   background: #fff url("../../images/bg/bg_sub_list.gif") 0 0 repeat-x;
 }
 
 #sub li a {
@@ -477,7 +441,7 @@ th {
 
 #pageTop a {
    padding: 5px 5px 5px 17px;
-   background: #ddd url("../images/bg/bg_pagetop.gif") 7px 50% no-repeat;
+   background: #ddd url("../../images/bg/bg_pagetop.gif") 7px 50% no-repeat;
    font-size: 11px;
 }
 
@@ -485,8 +449,8 @@ th {
 /* ========FOOTMENU CUSTOMIZE======== */
 #footMenu .section {
    float: left;
-   width: 220px;
-   margin-right: 30px;
+   width: 350px;
+   margin-right: 10px;
    padding: 0;
 }
 
@@ -508,8 +472,8 @@ th {
 
 #footMenu li a {
    padding-left: 10px;
-   font-size: 11px;
-   background: url(../images/bg/bg_footmenu.gif) 0 50% no-repeat;
+   font-size: 10px;
+   background: url(../../images/bg/bg_footmenu.gif) 0 50% no-repeat;
 }
 
 
@@ -520,153 +484,4 @@ th {
    font-style: normal;
    font-size: 11px;
    text-align: center;
-}
-
-/* ========3回生向けページ======== */
-.h1_for3 {
-   margin-top: 1px;
-   margin-bottom: 15px;
-   text-align: center;
-   line-height: 40px;
-   font-size: 20px;
-   font-weight: bold;
-   color: #fff;
-   background: #FF9999;
-   -webkit-box-shadow: 0 10px 6px -6px #777;
-   -moz-box-shadow: 0 10px 6px -6px #777;
-   box-shadow: 0 10px 6px -6px #777;
-}
-
-.h2_for3 {
-   margin-bottom: 15px;
-   padding-top: 10px;
-   text-align: center;
-   line-height: px;
-   font-size: 25px;
-   font-weight: bold;
-   color: #FF9999;
-   border-top: 3px dotted #FF9999;
-}
-
-
-#box1_for3 {
-   font-size: 12.5px;
-   color: #555555;
-   padding: 0px 30px 30px 30px;
-}
-
-.box2_for3_right {
-   width: 500px;
-   margin-left: 50px;
-}
-
-.box2_for3_left {
-   width: 500px;
-   margin-right: 50px;
-   margin-left: auto;
-}
-
-.baloon_q {
-   background-color: #FFBBBB;
-   color: #555555;
-   font-size: 10.5px;
-   text-align: center;
-   line-height: 50px;
-   border-radius: 8px;
-   position: relative;
-   margin-bottom: 10px;
-   height: 50px;
-   -webkit-box-shadow: 0 10px 6px -6px #777;
-   -moz-box-shadow: 0 10px 6px -6px #777;
-   box-shadow: 0 10px 6px -6px #777;
-}
-
-.baloon_q:after {
-   content: ' ';
-   height: 0;
-   position: absolute;
-   width: 0;
-   border: 12px solid transparent;
-   border-right-color: #FFBBBB;
-   right: 100%;
-   top: 25%;
-}
-
-.baloon_a1 {
-   background-color: #99CCFF;
-   color: #555555;
-   font-size: 10.5px;
-   text-align: center;
-   line-height: 40px;
-   border-radius: 8px;
-   position: relative;
-   margin-bottom: 10px;
-   height: 40px;
-   -webkit-box-shadow: 0 10px 6px -6px #777;
-   -moz-box-shadow: 0 10px 6px -6px #777;
-   box-shadow: 0 10px 6px -6px #777;
-}
-
-.baloon_a1:after {
-   content: ' ';
-   height: 0;
-   position: absolute;
-   width: 0;
-   border: 12px solid transparent;
-   border-left-color: #99CCFF;
-   left: 100%;
-   top: 22%;
-}
-
-.baloon_a2 {
-   background-color: #99CCFF;
-   color: #555555;
-   font-size: 10.5px;
-   text-align: center;
-   border-radius: 8px;
-   position: relative;
-   margin-bottom: 10px;
-   padding-top: 10px;
-   ;
-   height: 45px;
-   -webkit-box-shadow: 0 10px 6px -6px #777;
-   -moz-box-shadow: 0 10px 6px -6px #777;
-   box-shadow: 0 10px 6px -6px #777;
-}
-
-.baloon_a2:after {
-   content: ' ';
-   height: 0;
-   position: absolute;
-   width: 0;
-   border: 12px solid transparent;
-   border-left-color: #99CCFF;
-   left: 100%;
-   top: 28%;
-}
-
-.baloon_a3 {
-   background-color: #99CCFF;
-   color: #555555;
-   font-size: 10.5px;
-   text-align: center;
-   border-radius: 8px;
-   position: relative;
-   margin-bottom: 10px;
-   padding-top: 10px;
-   height: 60px;
-   -webkit-box-shadow: 0 10px 6px -6px #777;
-   -moz-box-shadow: 0 10px 6px -6px #777;
-   box-shadow: 0 10px 6px -6px #777;
-}
-
-.baloon_a3:after {
-   content: ' ';
-   height: 0;
-   position: absolute;
-   width: 0;
-   border: 12px solid transparent;
-   border-left-color: #99CCFF;
-   left: 100%;
-   top: 33%;
 }
